--- a/index.html
+++ b/index.html
@@ -3,12 +3,17 @@
 <head>
   <meta charset="UTF-8">
   <title>Document</title>
-  <link rel="stylesheet" href="index.css">
 </head>
 <body>
 
   <div id="container">
   </div>
+
+  <form >
+    <input id="student_name" type="text" name="student_name">
+    <button onclick="send()">ADD STUDENT</button>
+  </form>
+
 
   <script
   src="https://code.jquery.com/jquery-3.3.1.min.js"
