Add : $.post front

--- a/index.html
+++ b/index.html
@@ -6,14 +6,13 @@
 </head>
 <body>
 
-  <div id="container">
-  </div>
-
-  <form >
-    <input id="student_name" type="text" name="student_name">
-    <button onclick="send()">ADD STUDENT</button>
+  <form>
+    <input id="nom-etudiant" type="text"/>
+    <button onClick="send()">VALIDER</button>
   </form>
 
+  <div id="container">
+  </div>
 
   <script
   src="https://code.jquery.com/jquery-3.3.1.min.js"
